fix(ol): spacing with paragraphs

--- a/src/scss/base/_base.list.scss
+++ b/src/scss/base/_base.list.scss
@@ -14,6 +14,7 @@ ul, ol {
   }
 }
 
-ul + p {
+ul + p,
+ol + p {
   @include margin-top(1);
 }
